# automation

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
capture/: common.py  cv.py  ipy.py  ocr.py  types.py  utils.py
capture/games/: d2.py  nms.py  poe.py  poe2.py  poe3.py  trade_cards.py
capture/tests/: conftest.py  test_system_bridge.py  test_utils.py
low_level/: benchmark.py  global_shortcut.c  screenshot.c  wf-recorder
low_level/automation/: Cargo.toml  pyproject.toml  test_automation.py
low_level/automation/src/: lib.rs
low_level/screenshot-rs/: Cargo.toml  pyproject.toml  test_capture.py
low_level/screenshot-rs/src/: lib.rs
low_level/system_bridge/: Cargo.toml  pyproject.toml
low_level/system_bridge/src/: lib.rs  screenshot.rs
low_level/system_bridge/src/shortcuts/: mod.rs  protocol.rs
scripts/: overlay.py  test_screenshot.py
