[package]
name = "automation"
version = "0.1.0"
edition = "2021"

[lib]
name = "automation"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-scanner = "0.31"
nix = { version = "0.29", features = ["mman", "fs", "poll"] }
parking_lot = "0.12"
